--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-image-crop-picker": "^0.36.0",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
